# NetGuard

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml  deploy-web-vercel.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/jni/netguard/: netguard.c  netguard.h
app/src/main/res/drawable/: baseline_file_copy_24.xml  host_allowed.xml  host_blocked.xml  lockdown_disabled.xml  lockdown_off.xml  lockdown_on.xml  other_off.xml  other_off_disabled.xml  other_on.xml  other_on_disabled.xml  screen_on.xml  screen_on_disabled.xml  twotone_info_outline_24.xml  twotone_notifications_24.xml  wifi_off.xml  wifi_off_disabled.xml  wifi_on.xml  wifi_on_disabled.xml
app/src/main/res/values-af-rZA/: strings.xml
app/src/main/res/values-ar-rSA/: strings.xml
app/src/main/res/values-az-rAZ/: strings.xml
app/src/main/res/values-bg-rBG/: strings.xml
app/src/main/rust/: Cargo.toml  build.rs  uniffi.toml
app/src/main/rust/bindgen/: Cargo.toml
app/src/main/rust/src/: dhcp.rs  dns.rs  engine.rs  engine_socks5.rs  engine_wire.rs  fragment.rs  lib.rs  packet.rs  parser_fuzz.rs  pcap.rs  platform.rs  runtime.rs  session.rs  tls.rs  uid.rs  uniffi_api.rs
docs/: ARCHITECTURE.md
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
scripts/: deploy-web-vercel.sh  generate-material-symbols.sh  simulate-web-ci.sh  verify-web-deploy.sh
shared/: build.gradle.kts
webApp/: build.gradle.kts  vercel.json
webApp/src/wasmJsMain/resources/: index.html
(+445 files in other folders)
